syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcCustomLib";
package WeatherForecast;

service WeatherForecasts {
  rpc GetWeatherStream (RequestContext) returns (stream WeatherData);
}

message WeatherData {
  google.protobuf.Timestamp dateTimeStamp = 1;
  int32 temperatureC = 2;
  int32 temperatureF = 3;
}

message RequestContext
{
	string condition = 1;
}